--- a/src/app/components/standard-sample/reagent/reagent-main/reagent-main.html
+++ b/src/app/components/standard-sample/reagent/reagent-main/reagent-main.html
@@ -167,7 +167,7 @@
 
           <button
             mat-menu-item
-            (click)="openDialog(ReagentDialog, 'standard-samples', Mode.CREATE_AS_TEMPLATE, item)">
+            (click)="openDialog(ReagentDialog, 'reagent', Mode.CREATE_AS_TEMPLATE, item)">
             <mat-icon>content_copy</mat-icon>
             <span>Создать на основе</span>
           </button>
