--- a/src/app/components/standard-sample/standard-main/standard-main.html
+++ b/src/app/components/standard-sample/standard-main/standard-main.html
@@ -19,7 +19,7 @@
       <app-precursors-main></app-precursors-main>
     </ng-template>
   </mat-tab>
-  <mat-tab label="История приготовленных растворов">
+  <mat-tab label="Приготовление растворов">
     <ng-template matTabContent>
       <app-chemical-solution-main></app-chemical-solution-main>
     </ng-template>
