--- a/src/app/components/standard-sample/reagent-expiration/reagent-expiration.html
+++ b/src/app/components/standard-sample/reagent-expiration/reagent-expiration.html
@@ -54,7 +54,7 @@
           </th>
           <td mat-cell *matCellDef="let row" class="mark-cell">
             @if (row.monthIndex === i) {
-              {{ row.expiryDate | date }}
+              {{ row.expiryDate | date:'shortDate' }}
             }
           </td>
         </ng-container>
