--- a/src/app/components/standard-sample/expenditure/reagent-history-expenditure/reagent-history-expenditure.scss
+++ b/src/app/components/standard-sample/expenditure/reagent-history-expenditure/reagent-history-expenditure.scss
@@ -1,6 +1,8 @@
 .reagent-info {
-  padding: 0 24px 16px;
-  font-size: 18px;
-  border-bottom: 1px solid #e2e8f0;
-  margin-bottom: 16px;
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  flex-wrap: wrap;
+  font-size: 18px !important;
 }
