--- a/src/app/components/standard-sample/solution/chemical-solution-dialog/chemical-solution-dialog.html
+++ b/src/app/components/standard-sample/solution/chemical-solution-dialog/chemical-solution-dialog.html
@@ -63,7 +63,7 @@
           </mat-chip-grid>
 
           <!-- Контейнер для input + кнопки -->
-          <div class="input-with-button">
+          <div class="input-guide-with-button">
             <input
               matInput
               [formControl]="documentInput"
