--- a/src/app/components/standard-sample/standard-main/standard-main.html
+++ b/src/app/components/standard-sample/standard-main/standard-main.html
@@ -9,12 +9,7 @@
       <app-reagent-main></app-reagent-main>
     </ng-template>
   </mat-tab>
-  <mat-tab label="Учет этилового спирта">
-    <ng-template matTabContent>
-      <app-ethanol-main></app-ethanol-main>
-    </ng-template>
-  </mat-tab>
-  <mat-tab label="Прекурсоры">
+  <mat-tab label="Прекурсоры и спирт">
     <ng-template matTabContent>
       <app-precursors-main></app-precursors-main>
     </ng-template>
