--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @use "styles/dialog-form";
 @use "styles/abstract-style";
 @use "styles/table-style";
+@use "styles/easy_style";
 
 @include mat.core();
 
