--- a/src/app/components/standard-sample/expenditure/reagent-history-expenditure/reagent-history-expenditure.html
+++ b/src/app/components/standard-sample/expenditure/reagent-history-expenditure/reagent-history-expenditure.html
@@ -2,6 +2,9 @@
 
 <div class="reagent-info">
   <strong>{{ data.value!.name }}</strong> (№ {{ data.value!.number }})
+  <span>
+    Остаток: {{ data.value!.remains }} {{ data.value!.unit }}
+  </span>
 </div>
 
 <mat-dialog-content>
@@ -38,18 +41,19 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let exp">
-          <button
-            mat-icon-button
-            [matTooltip]="'Удалить'"
-            (click)="deleteExpenditure(exp.id)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
+      @if(!data.value?.actDebiting) {
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let exp">
+            <button
+              mat-icon-button
+              [matTooltip]="'Удалить'"
+              (click)="deleteExpenditure(exp.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+      }
       <!-- Заголовки и строки -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -59,6 +63,13 @@
   }
 </mat-dialog-content>
 
-<mat-dialog-actions align="end">
-  <button mat-flat-button mat-dialog-close color="primary">Закрыть</button>
+<mat-dialog-actions align="end" >
+  <app-button mat-dialog-close class="mr-20 error">Закрыть</app-button>
+  @if (data.value?.type === 'CONTROLLED_SUBSTANCE') {
+    @if(!data.value?.canUse && !data.value?.actDebiting) {
+      <app-button (click)="openDialog(data.value)">Списать</app-button>
+    } @else {
+      <app-button (click)="openDialog(data.value)">Скачать акт списания</app-button>
+    }
+  }
 </mat-dialog-actions>
