--- a/src/app/components/standard-sample/reagent/reagent-main/reagent-main.html
+++ b/src/app/components/standard-sample/reagent/reagent-main/reagent-main.html
@@ -40,7 +40,7 @@
     </mat-menu>
 
     <button
-      (click)="openDialog(ReagentDialog, 'reagent', Mode.CREATE)"
+      (click)="openDialog(ReagentDialog, Mode.CREATE)"
       [matTooltip]="'Добавить реактив'"
       class="table-add-button">
       <mat-icon>add</mat-icon>
@@ -78,7 +78,7 @@
         Изготовитель и дата выпуска
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.producer || '—' }}
+        {{ item.producer }}
         @if (item.produceDate) {
           от {{ item.produceDate | date:'dd.MM.yyyy' }}
         }
@@ -87,7 +87,7 @@
 
     <ng-container matColumnDef="purity">
       <th mat-header-cell *matHeaderCellDef>
-        Чистота реактива
+        Степень чистоты
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
         {{ getPurity(item.purityTypeId, item.purityValue) }}
@@ -100,7 +100,7 @@
         Назначение
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.purpose || '—' }}
+        {{ item.purpose }}
       </td>
     </ng-container>
 
@@ -112,7 +112,7 @@
         Дополнительные сведения
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.information || '—' }}
+        {{ item.information | empty }}
       </td>
     </ng-container>
 
@@ -122,14 +122,14 @@
         Условия применения
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
-        {{ item.termsOfUse || '—' }}
+        {{ item.termsOfUse | empty }}
       </td>
     </ng-container>
 
     <!-- Нормативные документы -->
     <ng-container matColumnDef="regulatoryDocuments">
-      <th mat-header-cell [matTooltip]="'Нормативные документы (НД)'" *matHeaderCellDef>
-        Нормативные документы (НД)
+      <th mat-header-cell [matTooltip]="'Методики измерения'" *matHeaderCellDef>
+        Методики измерения
       </th>
       <td mat-cell *matCellDef="let item" class="data-cell">
         @if (item.regulatoryDocuments?.length; as count) {
@@ -140,6 +140,33 @@
           </div>
         } @else {
           —
+        }
+      </td>
+    </ng-container>
+
+    <!-- Право владения -->
+    <ng-container matColumnDef="ownership">
+      <th mat-header-cell
+          [matTooltip]="'Право собственности или иное законное основание, предусматривающее право владения и пользования (реквизиты подтверждающих документов)'"
+          *matHeaderCellDef>
+        Право владения
+      </th>
+      <td mat-cell *matCellDef="let item" class="data-cell">
+        @if (item.contract; as c) {
+          <div class="contract-info">
+            <div><strong>Тип:</strong> {{ c.isOwn ? 'Собственность' : 'Аренда' }}</div>
+            @if (c.contractNumber) {
+              <div><strong>Документ:</strong> №{{ c.contractNumber }}</div>
+            }
+            @if (c.contractDate) {
+              <div><strong>От:</strong> {{ c.contractDate | date }}</div>
+            }
+            @if (!c.isOwn && c.contractDate && c.endAt) {
+              <div><strong>Срок:</strong> {{ c.contractDate | date }} — {{ c.endAt | date }}</div>
+            }
+          </div>
+        } @else {
+          <span>—</span>
         }
       </td>
     </ng-container>
@@ -160,21 +187,21 @@
           <!-- Редактировать -->
           <button
             mat-menu-item
-            (click)="openDialog(ReagentDialog, 'reagent', Mode.EDIT, item)">
+            (click)="openDialog(ReagentDialog, Mode.EDIT, item)">
             <mat-icon>edit</mat-icon>
             <span>Редактировать</span>
           </button>
 
           <button
             mat-menu-item
-            (click)="openDialog(ReagentDialog, 'reagent', Mode.CREATE_AS_TEMPLATE, item)">
+            (click)="openDialog(ReagentDialog, Mode.CREATE_AS_TEMPLATE, item)">
             <mat-icon>content_copy</mat-icon>
             <span>Создать на основе</span>
           </button>
 
           <button
             mat-menu-item
-            (click)="openDialogExpenditure('reagent', item)">
+            (click)="openDialogExpenditure(item)">
             <mat-icon>remove_shopping_cart</mat-icon>
             <span>Взять реактив</span>
           </button>
@@ -189,7 +216,7 @@
           <!-- Удалить -->
           <button
             mat-menu-item
-            (click)="delete(item.id, 'reagent')">
+            (click)="delete(item.id)">
             <mat-icon>{{ item.canUse ? 'move_to_inbox' : 'delete' }}</mat-icon>
             <span>{{ item.canUse ? 'Убрать в архив' : 'Удалить' }} </span>
           </button>
