--- a/src/app/components/standard-sample/solution/chemical-solution-main/chemical-solution-main.html
+++ b/src/app/components/standard-sample/solution/chemical-solution-main/chemical-solution-main.html
@@ -40,7 +40,7 @@
     </mat-menu>
 
     <button
-      (click)="openDialog(ChemicalSolutionDialog, 'reagent', Mode.CREATE)"
+      (click)="openDialog(ChemicalSolutionDialog, Mode.CREATE)"
       [matTooltip]="'Добавить реактив'"
       class="table-add-button">
       <mat-icon>add</mat-icon>
@@ -151,21 +151,21 @@
           <!-- Редактировать -->
           <button
             mat-menu-item
-            (click)="openDialog(ChemicalSolutionDialog, 'chemical-solution', Mode.EDIT, item)">
+            (click)="openDialog(ChemicalSolutionDialog, Mode.EDIT, item)">
             <mat-icon>edit</mat-icon>
             <span>Редактировать</span>
           </button>
 
           <button
             mat-menu-item
-            (click)="openDialog(ChemicalSolutionDialog, 'chemical-solution', Mode.CREATE_AS_TEMPLATE, item)">
+            (click)="openDialog(ChemicalSolutionDialog, Mode.CREATE_AS_TEMPLATE, item)">
             <mat-icon>content_copy</mat-icon>
             <span>Создать на основе</span>
           </button>
 
           <button
             mat-menu-item
-            (click)="openDialogExpenditure('chemical-solution', item)">
+            (click)="openDialogExpenditure(item)">
             <mat-icon>remove_shopping_cart</mat-icon>
             <span>Взять реактив</span>
           </button>
@@ -180,7 +180,7 @@
           <!-- Удалить -->
           <button
             mat-menu-item
-            (click)="delete(item.id, 'reagent')">
+            (click)="delete(item.id)">
             <mat-icon>{{ item.canUse ? 'move_to_inbox' : 'delete' }}</mat-icon>
             <span>{{ item.canUse ? 'Убрать в архив' : 'Удалить' }} </span>
           </button>
